# georag_project

./: .gitignore  docker-compose.yml  pyproject.toml
app/: run_pipeline.py
app/ingestion/: boundaries.py  stac_crawler.py
app/retrieve/: filter.py
app/storage/: embeddings.py  repository.py
infrastructure/database/: Dockerfile  init.sql
